# systemd-hub

./: AGENTS.md  CHANGELOG.md  CODEBASE.md  Cargo.toml  README.md  skills-lock.json
.agents/skills/developing-gtk-apps/: SKILL.md  gtk-dbus-reference.md  gtk-debugging-reference.md  gtk-gobject-reference.md  gtk-i18n-reference.md  gtk-packaging-reference.md  gtk-patterns-reference.md  gtk-testing-reference.md
.github/workflows/: ci.yml  release.yml
data/: dev.systemdhub.SystemdHub.desktop
docs/: service-categories.md  systemd-hub-mvp.md
scripts/: package-appimage.sh  package-deb.sh  package-rpm.sh  package-tarball.sh
src/: main.rs
src/app/: application.rs  mod.rs  window.rs
src/dbus/: mod.rs  systemd.rs
src/models/: mod.rs  settings.rs  system_info.rs  unit.rs
src/services/: journal.rs  mod.rs  settings.rs  system_info.rs  units.rs
src/ui/: about.rs  dashboard.rs  log_viewer.rs  mod.rs  service_detail.rs  service_list.rs  settings.rs  sidebar.rs  unit_object.rs
src/ui/services/: inspector.rs  mod.rs  view.rs
src/utils/: mod.rs  unit_category.rs
